# automapaper

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  looksies.frag  meson.build  random.frag  test.frag
defaults/: config.toml  display.frag  init.frag  state.frag
glad/: glad.c
inc/: conf.h  paper.h  utils.h
inc/glad/: glad.h  glad_egl.h
src/: conf.c  main.c  main.rs  paper.c  utils.c
