[package]
name = "automapaper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.2"
pollster = "0.3.0"
raw-window-handle = "0.6.0"
smithay-client-toolkit = "0.18.1"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ["client"] }
wgpu = "0.19.1"
